--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div>
         <h1>Jorge Hernández</h1>
         <p>Desarrollando Sistemas para un Mundo Digital</p>
-        <a href="https://github.com/jorgar" target="_blank">Códigos fuente de estos proyectos en GIT</a>
+        <a href="https://github.com/jorgar?tab=repositories" target="_blank">Sitio GITHUB</a>
     </div>
     <img src="./img/portada closeUp.png" alt="">
 </header>
